fix typo in README

--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 # AnalyticSlabDiffusion
-Python implementation of analytic diffusion to diffusion through slab with mixed boundary conditions
+Python implementation of analytic solution to diffusion through slab with mixed boundary conditions
